--- a/index - Copy.html
+++ b/index - Copy.html
@@ -52,10 +52,10 @@
 		
 		                        <ul class="nav navbar-nav">
 		                            <li class="active">
-		                                <a href="#">HOME</a>
+		                                <a href="index.html">HOME</a>
 		                            </li>
 		                            <li class="">
-		                                <a href="#">SERVICES</a>
+		                                <a href="services.html">SERVICES</a>
 		                            </li>
 
 		                            <li class="">
